# wall

./: .gitignore  .travis.yml  InputData.csv  Makefile  README.md  cli.py  plot.py  pyproject.toml  requirements.txt  setup.py  test_wall.py  wall.py
notebooks/: Wall Thickness.ipynb
tests/: test_wall.py
wall/: __init__.py  __main__.py  wall.py
